# chart-gpt

./: .gitignore  AGENTS.md  README.md  biome.json  drizzle.config.ts  package.json  pnpm-lock.yaml
drizzle/: 0001_outgoing_tarantula.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
memory-bank/: auth-routes.md  docs.md
prompts/: chat-db.md
src/app/: client-greeting.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/trpc/[trpc]/: route.ts
src/app/coming-soon/: page.tsx
src/app/contact/: page.tsx
src/app/docs/: page.tsx
src/app/pricing/: page.tsx
src/app/privacy/: page.tsx
src/app/terms/: page.tsx
src/components/: ComingSoon.tsx
src/db/: schema.ts
src/lib/: auth-client.ts  auth.ts  db.ts
src/store/: CountProvider.tsx
src/trpc/: client.tsx  init.ts  query-client.ts  server.tsx
src/trpc/routers/: _app.ts  auth.ts
workflows/: README.md  pyproject.toml
workflows/memory-bank/: docs.md
workflows/practice/: chat-db.py  schema_viewer.py  sql-chat.ipynb
workflows/prompts/: chat-llm-db.md  db-schema.md  fastapi-setup.md
workflows/src/: app.py
workflows/src/core/: llm_chat_db.py
workflows/src/database/: db_setup.py
workflows/src/utils/: schema_viewer.py
